--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,14 @@
         android:background="@color/white"
         android:layout_gravity="bottom"
         android:padding="5dp">
+
         <com.ruthiy.care2car.utils.views.MyTextView
             android:id="@+id/tv_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:gravity="start"
+            android:layout_gravity="left"
+            android:layout_alignParentLeft="true"
             android:layout_marginBottom="5dp"
             android:text="Your current Location is: "/>
         <com.ruthiy.care2car.utils.views.MyTextView
@@ -44,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:gravity="center|center_horizontal"
+            android:layout_gravity="center"
             android:layout_marginBottom="5dp"
             android:layout_below="@id/tv_label"
             android:text="Unknown Address"/>
@@ -53,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAllCaps="false"
-            android:background="#009688"
+            android:background="@drawable/mybutton"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/bn_askHelp"
 
