--- a/app/src/main/res/drawable/my_rectangle.xml
+++ b/app/src/main/res/drawable/my_rectangle.xml
@@ -3,5 +3,5 @@
     <solid android:color="@color/common_action_bar_splitter" />
     <stroke
         android:width="1dp"
-        android:color="@color/common_action_bar_splitter" />
+        android:color="#5e7974" />
 </shape>
