--- a/app/src/main/res/drawable/mybutton.xml
+++ b/app/src/main/res/drawable/mybutton.xml
@@ -17,8 +17,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="15dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <stroke android:width="1dip" android:color="#B2DFDB" />
+            <gradient android:angle="-90" android:startColor="#80CBC4" android:endColor="#4DB6AC" />
         </shape>
     </item>
 </selector>
