--- a/app/src/main/res/layout/activity_open_request.xml
+++ b/app/src/main/res/layout/activity_open_request.xml
@@ -17,8 +17,15 @@
         android:text="Uknown Adress"
         android:gravity="center_horizontal"
         android:textColor="@color/black_87pc"/>
+
+    <com.ruthiy.care2car.utils.views.MyTextViewBold
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#F9A825"
+        android:textStyle="bold"
+        android:text="What is your problem?"/>
     <View
-        android:background="#FBC02D"
+        android:background="#E0E0E0"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         />
@@ -27,65 +34,113 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_weight="1"
-        android:entries="@array/category"
-        android:hint="@string/prompt_email"
-        />
+        android:entries="@array/category"/>
+
+    <com.ruthiy.care2car.utils.views.MyTextViewBold
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#F9A825"
+        android:text="Which engine you have?"/>
 
     <View
-        android:background="#FBC02D"
+        android:background="#E0E0E0"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         />
-
     <Spinner
         android:id="@+id/spinner_engineValume"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_weight="1"
-        android:entries="@array/engineValume"
-        android:labelFor="@color/abc_search_url_text_normal" />
+        android:entries="@array/engineValume" />
 
+
+    <com.ruthiy.care2car.utils.views.MyTextViewBold
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#F9A825"
+        android:text="Choose your car type:"/>
     <View
-        android:background="#FBC02D"
+        android:background="#E0E0E0"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         />
-
     <Spinner
         android:id="@+id/spinner_type"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
-        android:entries="@array/engineValume"/>
+        android:entries="@array/type"/>
+
+    <com.ruthiy.care2car.utils.views.MyTextViewBold
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#F9A825"
+        android:text="Remarks:"/>
+
     <View
-        android:background="#FBC02D"
+        android:background="#E0E0E0"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         />
-
     <com.ruthiy.care2car.utils.views.MyEditText
         android:id="@+id/et_remarks"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/remarks" />
+        android:background="#00000000"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_weight="1"/>
+
+    <com.ruthiy.care2car.utils.views.MyTextViewBold
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#F9A825"
+        android:text="Your Name:"/>
+    <View
+        android:background="#E0E0E0"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        />
 
     <com.ruthiy.care2car.utils.views.MyEditText
         android:id="@+id/et_user_name"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#00000000"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_weight="1"  />
+
+    <com.ruthiy.care2car.utils.views.MyTextViewBold
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="#F9A825"
+        android:text="Your Phone:"/>
+
+    <View
+        android:background="#E0E0E0"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        />
 
     <com.ruthiy.care2car.utils.views.MyEditText
         android:id="@+id/et_user_phone"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:inputType="phone"
+        android:background="#00000000"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_alignParentLeft="true"
         android:layout_weight="1"  />
 
     <com.ruthiy.care2car.utils.views.MyButton
@@ -95,6 +150,7 @@
         android:layout_gravity="center"
         android:textAllCaps="false"
         android:gravity="center"
+        android:textSize="20sp"
         android:layout_marginBottom="9dp"
         android:background="@drawable/mybutton"
         android:text="@string/accept" />
