--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView android:id="@+id/text_name"
-
-    style="@style/SpinnerItem"
+    style="?android:attr/spinnerItemStyle"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
